updated at: 2023-04-25 23:05, SlumberSunset - schriften - BOOTH

--- a/VRChat/50/1257450.html
+++ b/VRChat/50/1257450.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YmCnf0XK7xwFQVnbiGTOcHzo1S1kpbUiDYVpb6ZalpA="></script>
+    "/KdsoitFWeKbaSyePC2ZJxyY7U8VnwZDUooReCfwkfQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SlumberSunset","description":"Slumber Sunset\n製作者：Coquelicotz（コクリコ）\n販売者：翅繭（ハネマユ）","url":"https://booth.pm/ja/items/1257450","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/e3641e04-3797-4c22-9a48-2bce2e78fb4a/i/1257450/14202bf7-872b-4c82-b552-2475bd9c75af_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YmCnf0XK7xwFQVnbiGTOcHzo1S1kpbUiDYVpb6ZalpA="></script>
+    nonce="/KdsoitFWeKbaSyePC2ZJxyY7U8VnwZDUooReCfwkfQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1257450/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               140
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1257450/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               140
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
