--- a/VRChat/43/1251843.html
+++ b/VRChat/43/1251843.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YuDC0wbcOHx+IZgb3InBx/Iitcr4Dpb4SEAI/7BK5Jc="></script>
+    "dkyh898Uz1phBlkqJDuL9AAGHUg9l4T88htxPElFjQ8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おきゅたんバーチャル抱き枕セット","description":"おきゅたんモチーフのバーチャル抱き枕が２種類入ったお得なセット！　キミの安眠をバーチャルにサポートするよ。\n\nタイプA：おやすみおきゅたん\nタイプB：おきゅたん＆おきゅたんbot\n\n※VRChat用のワールド用データとしての抱き枕です。サンプルワールドデータ付き。\n\n※DynamicBoneをお持ちの方にはボーン入りで少し揺れるバージョンも同梱されているので、お好みで使ってみてね。\n\n※商品写真にあるパジャマおきゅたんアバターは付属しないよっ\n\n\n★スペシャルサンクス\n\n抱き枕イラスト：まいてぃ999さん\nhttps://twitter.com/mighty999\n\n現実世界用はこちら！ バーチャルと現実と両方あるとプレゼンスがアップ！？\nおきゅたん＆おきゅたんbot 抱き枕カバー\nhttps://mighty.booth.pm/items/1164749\n\n枕のボーンとウェイト：オノッチ / 鹿さん\nhttps://twitter.com/onotchi_\n\n\n--------------------\n\n● 規約／ご注意\n\n　・VRChatのワールドの一部に含んだり、ご自身のアバターのアクセサリーに使用可（ペデスタルも可）\n\n　・SNSへのシェアについては、VRChat内の写真などの形でのシェア（元の画像データそのまま配布でとかではない）なら歓迎です。\n\n　・改変について、オリジナルの絵柄に変えて自分で使ったり、一部の友人に渡すなどは可。\n\n　・モデルを含んだ改変データをネット上で広く無償配布したり、販売したりするのは不可（相談してね）。\n\n\n　・動画の配信時の使用、出演、映り込み、収益化配信など可。その際のクレジット表記も不要。\n\n　※クレジット表記は基本不要ですが、おきゅたんやおきゅまーとの名前やリンクを表記してもらえるのはもちろんうれしいです。\n\n　・おきゅたんのキャラクターをもとにした二次創作についてのQ\u0026Aは下記URLをご参照ください。\n\nhttps://ocutanbot.wixsite.com/ocutan/faq","url":"https://booth.pm/ja/items/1251843","offers":{"priceCurrency":"JPY","@type":"Offer","price":"480"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1251843/b4b27a39-7443-45fc-878d-568ce48aae39_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YuDC0wbcOHx+IZgb3InBx/Iitcr4Dpb4SEAI/7BK5Jc="></script>
+    nonce="dkyh898Uz1phBlkqJDuL9AAGHUg9l4T88htxPElFjQ8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -195,7 +195,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1251843/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
@@ -210,14 +210,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1251843/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
