--- a/VRChat/44/1257244.html
+++ b/VRChat/44/1257244.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cJlzuGCXlUtt2yMxqosEIs2cuLLIyjCwUvFxOE0McHE="></script>
+    "KJiE6hLlqSwuRAGoXbtIiDoQLNP7Cg1nTGe+L/0mW7Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ひなげし亭の広告","description":"VRChatのワールドに設置することを想定した、ひなげし亭の広告です。\nライセンスはCC0です。\n\nThis is advertisement of hinageshi-tei for VRChat world.\nLicense is CC0.","url":"https://booth.pm/ja/items/1257244","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1257244/5f08df0e-5c3b-4186-9e5b-a13a11a20ae2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cJlzuGCXlUtt2yMxqosEIs2cuLLIyjCwUvFxOE0McHE="></script>
+    nonce="KJiE6hLlqSwuRAGoXbtIiDoQLNP7Cg1nTGe+L/0mW7Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1257244/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               319
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1257244/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               319
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
