--- a/VRChat/97/1256797.html
+++ b/VRChat/97/1256797.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1vITNytNYEUZYuOhDelA6IWZ5RKxkGEX0cUZY3qpgHA="></script>
+    "LM+3fKMX2/V6ViDwIcMvouhCwE3pw/mAybMb2VXuDZI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクセル製展示用ブース","description":"【概要】\nボクセル製の展示用のブースになります。\n18360ポリゴン。\n有料版との内容に差異はありません。\n\n【内容】\nobjファイル、mtlファイル、PNGテクスチャファイル、Readme同梱。\n\n【使用に際して】\n改変等は自由です。\n再配布は禁止とします。\n\n【その他】\n何かありましたら作者のTwitterまでご連絡願います。\nTwitterID：@mayoi_2_go","url":"https://booth.pm/ja/items/1256797","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b21016d8-acb0-4bb6-b33d-aa858d853231/i/1256797/4595dd59-ff75-43e4-8cba-c10f0029f463_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1vITNytNYEUZYuOhDelA6IWZ5RKxkGEX0cUZY3qpgHA="></script>
+    nonce="LM+3fKMX2/V6ViDwIcMvouhCwE3pw/mAybMb2VXuDZI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1256797/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1256797/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
