updated at: 2023-04-25 23:07, GA-03 - 工房「The garden of Ash」 - BOOTH

--- a/VRChat/39/1256839.html
+++ b/VRChat/39/1256839.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "o+817GxTXq8AENgwZOydYShfDb6X3VNJAahQvD7XBUI="></script>
+    "9ZVkE47M2xllq0t7uWXla/6D8sW7Xx2R+BgbfybLozQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"GA-03","description":"デザインアドバイザー：アザトナナ（ななや）さん\nhttps://twitter.com/aoinanaya\n\n剣と銃の２形態に変形する銃剣武器です\nStandardシェーダー向きのPBRテクスチャと、トゥーン系シェーダー向きのColorテクスチャを用意しています\n\nポリゴン数　△：8232\n\n※初のアニメーション武器です、不具合等ありましたらお気軽にお知らせください","url":"https://booth.pm/ja/items/1256839","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1256839/6d8b3fcc-88a7-4823-b031-abe1286a2094_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="o+817GxTXq8AENgwZOydYShfDb6X3VNJAahQvD7XBUI="></script>
+    nonce="9ZVkE47M2xllq0t7uWXla/6D8sW7Xx2R+BgbfybLozQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1256839/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1256839/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
