--- a/VRChat/64/1251764.html
+++ b/VRChat/64/1251764.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DIcrBNf8tMf1bypOyhcEY/a7CU+4q0VomNiPZhOBwRg="></script>
+    "7OVB3Egpflx2rTomAGOFllgBmxKPfvMmewekCbnXPwo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ストラップパンプス25色セット【VRoid用衣装】","description":"・バーチャルマーケット3出展衣装\nこのデータはVRoid用のストラップパンプスデザインの靴用テクスチャ25色セットです。","url":"https://booth.pm/ja/items/1251764","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1251764/1c4cdd89-6eb4-482b-8059-79a2b9ec6a96_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DIcrBNf8tMf1bypOyhcEY/a7CU+4q0VomNiPZhOBwRg="></script>
+    nonce="7OVB3Egpflx2rTomAGOFllgBmxKPfvMmewekCbnXPwo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1251764/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               65
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1251764/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               65
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
