updated at: 2023-04-25 23:10, [3Dモデル] 雛飾り(2019年干支仕様) - 3D直売所 †ごきげんよう† - BOOTH

--- a/VRChat/26/1255526.html
+++ b/VRChat/26/1255526.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cdRxkq8BtEGH7mqQH/N4EdgEjQMjbFCaarp8P2PsIWA="></script>
+    "P5gkgNRDgSjA9mvmaDDvUGH93Bk7DL2vhq57O6nKaK4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル] 雛飾り(2019年干支仕様)","description":"\n【紹介】\n雛飾り2019年干支仕様（イノシシ）です\n販売が3月3日ギリギリになってしまい申し訳ないです＞＜(いつも言ってる)\n\n【商品内容】\n\n●2019_hinakazari.unitypackage\n\n・雛飾り\nhinakazari.fbx(13,486△ポリ)\n\n・prefab\n\n・Material\n(スタンダードシェーダのままなのでお好きなシェーダーに変更して使用することをオススメします)\n(※注 販売画像のものはFlat_Lit_Toonシェーダを使用しています)\n\n・Textures\n\n●readme\n\n\n【使用に関する注意】\n\n・モデル、テクスチャの改変自由です。\n(もちろんそのまま使っていただいても大丈夫です)\n\n・無償、有償に関わらずデータの再配布は禁止いたします。\n(バーチャルマーケットへの出展ブースに使用する目的で、入稿のための再配布のみ許可致します。)\n\n・VRChat以外の使用(動画やゲーム開発等)に使っていただくことも可能です。\n(作者にご一報いただければ喜んで見に行きます)\n\n・商用利用・R18に関する利用も可能です。\n(作者にご一報いただければ喜んでry)\n\n・著作権については作者(ねこヒゲ)が所持しており、これを放棄していません。\n\n【免責事項】\nモデルデータを使用して発生したいかなる損害・損失・その他不利益等には、当方は一切の責任を負いません\n\n\n【連絡先】\nhttps://twitter.com/NekoHige1119","url":"https://booth.pm/ja/items/1255526","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/1f3f6d70-407d-4a27-b688-9aff37b23ed9/i/1255526/f5cbc2c4-fcc9-4fb2-a26e-987a855a059b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cdRxkq8BtEGH7mqQH/N4EdgEjQMjbFCaarp8P2PsIWA="></script>
+    nonce="P5gkgNRDgSjA9mvmaDDvUGH93Bk7DL2vhq57O6nKaK4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1255526/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               18
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1255526/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               18
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
