updated at: 2023-04-25 23:10, セルオートマトンシェーダー - うさみみ雑貨店 - BOOTH

--- a/VRChat/57/1255157.html
+++ b/VRChat/57/1255157.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "98ZOPqI+BEz4yXGdbvlidzccsY7iKlzHpav14/TV4wI="></script>
+    "zTiGg0BqAPPyn/eS0f0dsDIxVV1hl74M1NbVdBwbfNo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"セルオートマトンシェーダー","description":"UnityのCameraと組み合わせることでライフゲーム等のセルオートマトンを動かすシェーダーです。\nUnitypackage形式で配布しています．\n開発支援をされる場合は必ず無料版を試してからにしてください．\nソースコードはGitHubでも配布しています→https://github.com/myxyy/2DCA\n\n## ライセンス等\n* レポジトリ内のソースコード等はMITライセンスに基づいて配布されます．LICENCEファイルの改変はできません．\n* レポジトリ管理者 みきしぃ はレポジトリ内のファイルを使用したことで発生する一切の損害の責任を負わないものとします\n* 上記が遵守される限り本ソースコード等を使用して作成した成果物は自由に公開・販売・再配布等が可能となります","url":"https://booth.pm/ja/items/1255157","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1255157/9d304601-366f-4b03-b845-f4700a477991_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="98ZOPqI+BEz4yXGdbvlidzccsY7iKlzHpav14/TV4wI="></script>
+    nonce="zTiGg0BqAPPyn/eS0f0dsDIxVV1hl74M1NbVdBwbfNo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1255157/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1255157/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
