updated at: 2023-04-25 23:10, 小物「段ボール」【VRChat向け】 - 赤銅インペール - BOOTH

--- a/VRChat/56/1254656.html
+++ b/VRChat/56/1254656.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "APSNeGxhtJDd6Bm+ZV1cVu0dw+4DpKWKRbX8XEyX+Zs="></script>
+    "Ljm9QWuskZLNDo8SNRgiFO3QCX3dW1AGJ1YkqB/283Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"小物「段ボール」【VRChat向け】","description":"--------------------------------------------------\n\n◆段ボール\n\nUnity（主にVRChat）で使える小物「段ボール」です。\nワールドに設置するなどしてお使い下さい。\n組立済のPrefabを同梱してあります。\n\nポリゴン数\t：△188\n\n--------------------------------------------------\n\n◆注意事項\n\n面倒な利用規約なんてありません。フリー素材です。\n良心に従ってご自由にお使い下さい。\n\n--------------------------------------------------\n\n◆二条阜（ツイッター：https://twitter.com/nizyou2）","url":"https://booth.pm/ja/items/1254656","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d587fec6-51e9-4d9d-afa4-8f9825678eca/i/1254656/d1180aa9-5154-45f0-be3d-d1822e9317b3_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="APSNeGxhtJDd6Bm+ZV1cVu0dw+4DpKWKRbX8XEyX+Zs="></script>
+    nonce="Ljm9QWuskZLNDo8SNRgiFO3QCX3dW1AGJ1YkqB/283Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1254656/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               217
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1254656/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               217
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
