updated at: 2023-04-25 23:11, VRChat向け_ミサンガブレスレット - karasoni - BOOTH

--- a/VRChat/31/1254431.html
+++ b/VRChat/31/1254431.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "GFWwjrpysTbrJDH+RjCqNR+S+77KcK5xQHGw32C4Wow="></script>
+    "zkGp3XNO3v5+1ZPjnDFqhHTKqK6m6V94rBdTzVwOit0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け_ミサンガブレスレット","description":"ＶＲＣ向けと書いてますが、基本ご自由にお使いください。\n\n※再配布、自作発言はおやめください。\n\n△ポリゴンが３３５５６ポリゴンと非常にポリゴン数が多いのでブレンダーなどでポリゴン数を減らすことをオススメします。\n（改変も可）\n\n使い方\nマテリアルの色をお好みの色に変えてお使いください（デフォルトは画像１枚目の色）\n\n黄色い部分のマテリアルはメタリックなどにするといいかもしれません。\n\n腕に付けて使うこと想定して作っています。（使い方は自由）\n（画像４枚目を参照）\n\n★の部分にボーンが入っているのでダイナミックボーンを設定することで揺らすことが可能です。\n\n","url":"https://booth.pm/ja/items/1254431","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/521730e0-f768-4371-b0ec-397b8f2b0bb4/i/1254431/c5453bd1-197a-4549-a88b-af451efd8ced_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GFWwjrpysTbrJDH+RjCqNR+S+77KcK5xQHGw32C4Wow="></script>
+    nonce="zkGp3XNO3v5+1ZPjnDFqhHTKqK6m6V94rBdTzVwOit0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1254431/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               192
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1254431/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               192
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
