updated at: 2023-04-25 23:11, [VRC]ホワイトデー用 チョコ - Naka-chan shop - BOOTH

--- a/VRChat/34/1254134.html
+++ b/VRChat/34/1254134.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZM0jBehV7e9joNi5zfmpx9dPBdlNhFJlw7WcD13cEjk="></script>
+    "76UzG4VD267RYEWpT+VOPoFKY+7il7QHWyCIhZ4Uonk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRC]ホワイトデー用 チョコ","description":"【VRC向け】ホワイデー向けチョコレート\n\n・Blenderで初めて作った3Dモデルです。\n　(元々バレンタイン用を色変更しました。)\n・ホワイトデーでのお返しのみ1回再配布可能です。\n・利用にあたって、利用規約に同意したものと致します。\n\n　【内容物】\n・FBX\n・マテリアル\n・テクスチャ\n・箱と蓋のUV図\n\n　【利用規約及び免責事項】\n以下ダウンロードしたデータの中に含まれる全てのデータを当作品と記載します。\n\n・当作品のVRCHATへのアップロードを許可します。\n・当作品を無断でアップロード、ファイル共有することは禁止します。\n・当作品を無断で再販売、改変しての販売は禁止します。\n・当作品の政治、宗教、他者への誹謗中傷目的での利用は禁止します。\n\n・当モデルを利用した事により生じた、いかなる損失、トラブル、損害は作者は一切責任を負わないものとします。\n\nCopyright (c) 2019 NK_NAKA All Rights Reserved.\n","url":"https://booth.pm/ja/items/1254134","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/d3558351-e7ac-4503-ab2d-386639de815c/i/1254134/1715b012-2cb4-4e38-9eb7-bf7021906367_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZM0jBehV7e9joNi5zfmpx9dPBdlNhFJlw7WcD13cEjk="></script>
+    nonce="76UzG4VD267RYEWpT+VOPoFKY+7il7QHWyCIhZ4Uonk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1254134/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               30
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1254134/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               30
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
