updated at: 2023-04-25 23:11, 【VRchat想定】ボクセル製鎌 - マヨイ工房 - BOOTH

--- a/VRChat/11/1253411.html
+++ b/VRChat/11/1253411.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "oSIieKBBdd7eQ4CvSj/qOVrre8mtfj5bx/FcPIjw34Y="></script>
+    "ldIi3lKuSI1Dzx3TeijXw0OIXzYjmTiHycnqzDl68UQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat想定】ボクセル製鎌","description":"【概要】\nボクセル製の鎌になります。\n2160ポリゴン\n\n【内容】\nobjファイル、mtlファイル、fbxファイル、PNGテクスチャファイル、Readme同梱。\n\n【使用に際して】\n改変等は自由です。\n再配布は禁止とします。\n\n【その他】\n何かありましたら作者のTwitterまでご連絡願います。\nTwitterID：@mayoi_2_go","url":"https://booth.pm/ja/items/1253411","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/b21016d8-acb0-4bb6-b33d-aa858d853231/i/1253411/5eefda7a-94dc-4fb1-ad80-80f6168a317c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oSIieKBBdd7eQ4CvSj/qOVrre8mtfj5bx/FcPIjw34Y="></script>
+    nonce="ldIi3lKuSI1Dzx3TeijXw0OIXzYjmTiHycnqzDl68UQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1253411/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1253411/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
