updated at: 2023-04-25 23:12, VRChat Voice Trigger - ありすらぼらとりー - BOOTH

--- a/VRChat/44/1253144.html
+++ b/VRChat/44/1253144.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "brYDeuLIQ9ppA0XdbkZSys8rKcL0sYtT/remfpbrPrw="></script>
+    "m9RIbkjZUM/XM7SdwlRimeUlIK+H9Tl9UgRyru+6fRs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat Voice Trigger","description":"「VRChat Voice Trigger」は、VRChatで音声認識でワールドオブジェクトを操作するアプリケーションになります。\n\n\nこのアプリを導入することで、Voice Triggerに対応したワールドで自分の音声を使ってワールドのオブジェクトを操作できるようになります。\n\n\n詳しい概要については以下を御覧ください。\nhttps://sansuke05.github.io/VRC-voice-trigger-web/manual/howToUse.html\n\n\nまた、実際に使用している動画をTwitterの方で公開しています。\n\nhttps://twitter.com/sansuke05_vr/status/1078588091441414145\n\nhttps://twitter.com/sansuke05_vr/status/1098592899200139267\n","url":"https://booth.pm/ja/items/1253144","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/db277c55-5a8d-4153-b028-c299ecdb1977/i/1253144/10eb6218-bd8e-4104-8156-d3d6b9285a60_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="brYDeuLIQ9ppA0XdbkZSys8rKcL0sYtT/remfpbrPrw="></script>
+    nonce="m9RIbkjZUM/XM7SdwlRimeUlIK+H9Tl9UgRyru+6fRs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1253144/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               178
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1253144/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               178
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
