updated at: 2023-04-25 23:12, 犬種族 - ギギギ無宿の枝 - BOOTH

--- a/VRChat/66/1252966.html
+++ b/VRChat/66/1252966.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "APdPHTI7nargSsXbBYocu3Lzc0Z9mvhoubptFpaTdds="></script>
+    "3Oew/uk54R1DvI4DY1Jk/A3qWHtjT3E5B4MwxQLjw1E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"犬種族","description":"含まれるもの\nunitypackage（設定済み）blenderファイル（素体）テクスチャ（png）３Ｄモデル（fbx）\n\n7000ポリゴン程のgoodな犬種族です。\n茶柴と黒柴のオプションがあります。\n\n木の棒を集める習性のある好奇心旺盛な種族です。\n\nDinamicBornや表情設定済み、VRchatですぐ使えます。\nまんまるシェーダー1.3を使用しています。\n\n\n\n\n※免責事項や規約など\n\nそれぞれの国における著作権や人権などに則って使用下さい。\n商業利用も改造も可です。再配布は商品なのでもちろん禁止でお願いします。\n\n問題が起きたら自分で解決してください。相談くらいは気分で乗ります。\n\n\n\n\n","url":"https://booth.pm/ja/items/1252966","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"6666","highPrice":"6666"},"image":"https://booth.pximg.net/c/620x620/6cb0c7b0-01b4-4d36-a3ba-4a98a916d181/i/1252966/05fb8eb4-1c4f-4747-908a-ae5825690f83_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="APdPHTI7nargSsXbBYocu3Lzc0Z9mvhoubptFpaTdds="></script>
+    nonce="3Oew/uk54R1DvI4DY1Jk/A3qWHtjT3E5B4MwxQLjw1E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -130,7 +129,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -171,7 +171,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1252966/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -186,14 +186,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1252966/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
